# ockr

./: .gitignore  Cargo.toml  LICENSE  README.md  zensical.toml
.github/workflows/: ci.yml  pages.yml
assets/: ockr.icns
docs/: backlog.md  index.html  index.md  keymap.html  keymap.md  style.css
manual/: book.toml
manual/src/: SUMMARY.md  configuration.md  getting-started.md  installation.md  introduction.md  keymap.md  lsp.md  modal-editing.md  plugins.md  themes.md  wikilinks.md
manual/theme/: ockr.css
ockr-plugin/: Cargo.toml
ockr-plugin-example/: Cargo.toml
ockr-plugin-example/src/: lib.rs
ockr-plugin/src/: lib.rs
scripts/: bundle.sh
site/: index.html  keymap.html  style.css
src/: actions.rs  main.rs  session.rs  settings.rs  undo_store.rs
src/command/: mod.rs
src/compiler/: mod.rs  preprocess.rs  world.rs
src/editor/: apply.rs  buffer.rs  command.rs  keymap.rs  keymap_helix.rs  keymap_standard.rs  mod.rs  state.rs
src/lsp/: mod.rs
src/plugin/: loader.rs  mod.rs  panel.rs  registry.rs  runtime.rs  thread_pool.rs
src/ui/: backlink_panel.rs  command_palette.rs  editor_pane.rs  file_picker.rs  graph_view.rs  html_preview.rs  main_window.rs  mod.rs  outline_panel.rs  plugin_manager.rs  plugin_panel.rs  preview.rs  quick_switch.rs  rename_modal.rs  settings_panel.rs  sidebar.rs  spellcheck.rs  template_picker.rs  theme.rs  vault_search.rs
src/vault/: backlinks.rs  mod.rs
stories/: helix-parity.md
themes/: ochre.toml  oxide.toml
