[package]
name = "ockr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ockr"
path = "src/main.rs"

[dependencies]
gpui = { version = "0.2", features = ["macos-blade"] }
typst = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
typst-render = "0.14"
typst-html = "0.14"
typst-pdf = "0.14"
image = "0.25"
time = { version = "0.3", features = ["local-offset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse"] }
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage", "NSView", "NSWindow"] }
objc2-web-kit = { version = "0.3.2", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKUserContentController",
    "WKUserScript",
    "WKScriptMessage",
    "WKScriptMessageHandler",
] }
