[workspace]
members = [".", "ockr-plugin", "ockr-plugin-example"]
resolver = "2"

[package]
name = "ockr"
version = "0.1.0"
edition = "2021"
description = "A Typst-native, keyboard-driven note editor with a Helix-style modal interface."
authors = ["Michael Hoffman <hoffman1512@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["typst", "editor", "notes", "helix", "markdown"]
categories = ["text-editors"]

[[bin]]
name = "ockr"
path = "src/main.rs"

[dependencies]
gpui = { version = "0.2", features = ["macos-blade"] }
typst = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
typst-render = "0.14"
typst-html = "0.14"
typst-pdf = "0.14"
image = "0.25"
time = { version = "0.3", features = ["local-offset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse", "display"] }
dirs = "6"
futures = "0.3"
wasmtime = { version = "31", features = ["cranelift"] }
wasmtime-wasi = "31"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSImage", "NSView", "NSWindow", "NSSpellChecker"] }
objc2-web-kit = { version = "0.3.2", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKUserContentController",
    "WKUserScript",
    "WKScriptMessage",
    "WKScriptMessageHandler",
] }
