[package]
name = "ockr-plugin"
version = "0.1.0"
edition = "2021"

[lib]
# rlib lets host-side `cargo build --workspace` compile this SDK as a normal
# library; cdylib is the wasm plugin artifact. (Plugins build for wasm32.)
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
